fix: remove overflow hidden from page class

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,5 +5,4 @@
     background-color: #fff;
     font-family: Gotham Pro, sans-serif;
     margin:0 auto;
-    overflow: hidden;
 }
